@@ -1,3 +1,14 @@
+2006-01-15  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c:
+	* src/sj-extractor.c:
+	* src/sj-metadata-musicbrainz.c:
+	* src/sj-prefs.c:
+	* src/sj-structures.c:
+	* src/sj-structures.h:
+	Add support for the MusicBrainz sortname attribute (Peter Oliver,
+	#313354).
+
 2006-01-10  Ross Burton  <ross@burtonini.com>
 
 	* src/sj-main.c:
